# NekiraPipeDemo

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md
Client/: CMakeLists.txt
Client/Lib/: CMakeLists.txt
Client/Lib/Private/: NekiraClientLib.cpp
Server/: CMakeLists.txt
Server/Lib/: CMakeLists.txt
Server/Lib/Private/: MessageItem.cpp  PipeSession.cpp
Server/Lib/Public/: MessageItem.hpp  PipeSession.hpp
Server/Main/: ServerApp.cpp  ServerApp.hpp  ServerMain.cpp
Utility/: CMakeLists.txt
Utility/Private/: NekiraPipeUtility.cpp
Utility/Public/: NekiraPipeUtility.hpp
